# vacuum_ros2_bridge

./: .gitattributes  CMakeLists.txt  README.md  package.xml
config/: bridge_params.yaml
launch/: bridge.launch.py
msg/: ActuatorCommand.msg  ActuatorStatus.msg  Bumper.msg  Cliff.msg  LedCommand.msg  VacuumStatus.msg
scripts/: bridge_node.py  calibrate_lidar_bag.py  calibrate_velocity.py
srv/: SetActuator.srv  SetLed.srv  SetLidar.srv
vacuum_ros2_bridge/: __init__.py  sangamio_client.py
